Updated code with more choices

--- a/HyperparameterTuner.ipynb
+++ b/HyperparameterTuner.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "1495a11d-301b-43a5-b24e-a0478b815637",
    "metadata": {},
    "outputs": [],
@@ -131,43 +131,32 @@
     "  model.add(keras.layers.Dense(\n",
     "      #hp.Choice('units', [8, 16, 32, 64, 128, 256, 512]),\n",
     "      units=hp.Int(\"units\", min_value=64, max_value=512, step=16),\n",
-    "      activation='relu'))\n",
+    "      activation=hp.Choice(\"activation\", [\"relu\", \"elu\"])))\n",
     "  model.add(keras.layers.Dense(\n",
     "      #hp.Choice('units', [8, 16, 32, 64, 128, 256, 512]),\n",
     "      units=hp.Int(\"units\", min_value=128, max_value=1024, step=16),\n",
-    "      activation='relu'))\n",
+    "      activation=hp.Choice(\"activation\", [\"relu\", \"elu\"])))\n",
     "  model.add(keras.layers.Dense(\n",
     "      #hp.Choice('units', [8, 16, 32, 64, 128, 256, 512]),\n",
-    "      units=hp.Int(\"units\", min_value=256, max_value=1024, step=32),\n",
-    "      activation='relu'))\n",
-    "\n",
+    "      units=hp.Int(\"units\", min_value=128, max_value=1024, step=16),\n",
+    "      activation=hp.Choice(\"activation\", [\"relu\", \"elu\"])))\n",
     "  model.add(keras.layers.Dense(1, activation='relu'))\n",
-    "  model.compile(loss='mse')\n",
+    "  model.compile(loss='mse',optimizer=hp.Choice(\"optimizer\", [\"adam\", \"adadelta\"]),)\n",
     "  return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "fbc9ef55-099f-4e80-a076-1521ec040f58",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /opt/conda/lib/python3.7/site-packages/tensorflow_core/python/ops/resource_variable_ops.py:1630: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "If using Keras pass *_constraint arguments to layers.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tuner = kt.RandomSearch(\n",
     "    build_model,\n",
     "    objective='val_loss',\n",
     "    overwrite=True,\n",
-    "    max_trials=20,\n",
+    "    max_trials=30,\n",
     "    #max_epochs=10,\n",
     "    executions_per_trial=2,\n",
     "    project_name=\"sample_search\")"
@@ -175,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "dcbe77b2-35d8-41de-9f81-106464b88473",
    "metadata": {},
    "outputs": [
@@ -183,12 +172,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trial 20 Complete [00h 00m 04s]\n",
-      "val_loss: 7.2049382741634656\n",
+      "Trial 7 Complete [00h 00m 04s]\n",
+      "val_loss: 8.599861224492392\n",
       "\n",
-      "Best val_loss So Far: 7.0546432213905526\n",
-      "Total elapsed time: 00h 01m 32s\n",
-      "INFO:tensorflow:Oracle triggered exit\n"
+      "Best val_loss So Far: 7.561386481309549\n",
+      "Total elapsed time: 00h 00m 28s\n",
+      "\n",
+      "Search: Running Trial #8\n",
+      "\n",
+      "Hyperparameter    |Value             |Best Value So Far \n",
+      "units             |464               |144               \n",
+      "activation        |elu               |elu               \n",
+      "optimizer         |adadelta          |adam              \n",
+      "\n",
+      "Train on 314 samples, validate on 78 samples\n",
+      "Epoch 1/10\n",
+      "314/314 [==============================] - 1s 3ms/sample - loss: 599.3728 - val_loss: 637.3239\n",
+      "Epoch 2/10\n",
+      "314/314 [==============================] - 0s 483us/sample - loss: 598.6707 - val_loss: 636.6444\n",
+      "Epoch 3/10\n",
+      "314/314 [==============================] - 0s 341us/sample - loss: 597.9435 - val_loss: 635.9407\n",
+      "Epoch 4/10\n",
+      "314/314 [==============================] - 0s 426us/sample - loss: 597.1971 - val_loss: 635.2135\n",
+      "Epoch 5/10\n",
+      "314/314 [==============================] - 0s 303us/sample - loss: 596.4272 - val_loss: 634.4721\n",
+      "Epoch 6/10\n",
+      "314/314 [==============================] - 0s 357us/sample - loss: 595.6518 - val_loss: 633.7227\n",
+      "Epoch 7/10\n",
+      "314/314 [==============================] - 0s 298us/sample - loss: 594.8597 - val_loss: 632.9558\n",
+      "Epoch 8/10\n",
+      "314/314 [==============================] - 0s 261us/sample - loss: 594.0460 - val_loss: 632.1741\n",
+      "Epoch 9/10\n",
+      "314/314 [==============================] - 0s 298us/sample - loss: 593.2171 - val_loss: 631.3819\n",
+      "Epoch 10/10\n",
+      "314/314 [==============================] - 0s 435us/sample - loss: 592.3740 - val_loss: 630.5725\n",
+      "Train on 314 samples, validate on 78 samples\n",
+      "Epoch 1/10\n",
+      "314/314 [==============================] - 1s 2ms/sample - loss: 600.1519 - val_loss: 638.0571\n",
+      "Epoch 2/10\n",
+      "314/314 [==============================] - 0s 212us/sample - loss: 599.4217 - val_loss: 637.2284\n",
+      "Epoch 3/10\n",
+      "314/314 [==============================] - 0s 201us/sample - loss: 598.6021 - val_loss: 636.3627\n",
+      "Epoch 4/10\n",
+      "314/314 [==============================] - 0s 223us/sample - loss: 597.7374 - val_loss: 635.3910\n",
+      "Epoch 5/10\n",
+      "314/314 [==============================] - 0s 192us/sample - loss: 596.6841 - val_loss: 634.1590\n",
+      "Epoch 6/10\n",
+      "314/314 [==============================] - 0s 255us/sample - loss: 595.3736 - val_loss: 632.7648\n",
+      "Epoch 7/10\n",
+      "314/314 [==============================] - 0s 252us/sample - loss: 593.8521 - val_loss: 631.1751\n"
      ]
     }
    ],
